# toy-problems

./: .gitignore  .python-version  Cargo.toml  algorithms.json  db.py  drill.py  info.toml  pyproject.toml  questions.db  questions.json  questions.py  quiz.py  requirements.txt  scraper.py  scratch.ipynb
arrays_and_strings/: reverseString.js
bit_manipulation/: missing_number.py  single_number.py
cli/: CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  problem_solving.py  problem_solving.tcss  questions.py  requirements.txt  setup.py
cli/config/: toy-problems.yml.example
cli/tests/: test_toy-problems.py
cli/toy-problems/: main.py
cli/toy-problems/controllers/: base.py
cli/toy_problems/: main.py
cli/toy_problems/controllers/: base.py
cli/toy_problems/core/: exc.py
cli/toy_problems/templates/: command1.jinja2
collections/: stack.rs
divide_and_conquer/: closest_pair.rs  count_inversions.rs  merge_sort.rs  points.txt
divide_and_conquer/randomized_select/: Cargo.toml
dynamic-connectivity/: client.py  quick_union.py
dynamic_connectivity/: client.py  quick_union.rs
dynamic_programming/: jump_game.py  parens.py
graphs/: shortest_path.py  topo_sort.py
heaps/: heap.rs  median_of_streaming_input.py
problems/: test.py
recursion_dynamic_programming/robot_grid/: robot_grid.md  robot_grid.py
recursion_dynamic_programming/steps/: steps.md  steps.py
src/: drill.rs  lib.rs  main.rs  problems.rs  run.rs
src/collections/: stack.rs
src/dynamic_connectivity/: percolation.ipynb  quick_find.py
trees/: create_min_bst.py  tree_node.py
(+2 files in other folders)
