[package]
name = "toy-problems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "toy_problems"
crate-type = ["cdylib"]

[dependencies]
console = "0.15.7"
dialoguer = "0.10.4"

[dependencies.pyo3]
version = "0.19.2"
features = ["auto-initialize"]
