[package]
name = "toy-problems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "toy_problems"
crate-type = ["cdylib"]

[dependencies]
argh = "0.1.12"
console = "0.15.7"
dialoguer = "0.10.4"
indicatif = "0.17.6"
notify = "6.0.1"
rand = "0.8.5"
serde = "1.0.183"
serde_json = "1.0.104"
toml = "0.7.6"
unicode-segmentation = "1.10.1"
pyo3 = "0.19.2" 
duckdb = "0.9.0"
